--- a/index.html
+++ b/index.html
@@ -15,13 +15,82 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
 
-    <title>Hello, world!</title>
+    <title>train schedular</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+      <!--Jumbotron-->
+      <div class="jumbotron bg-dark ">
+        <h1 class="display-4 text-white text-center">Train Schedule Control</h1>
+        <h2 class="display-8 text-white text-center">Never be late again</h2>
+      </div>
+
+      <div class="card">
+        <div class="card-header">
+          Current Employee
+        </div>
+        ​
+        <table class="table text-center">
+          <thead>
+            <tr>
+              <th scope="col">Train Name</th>
+              <th scope="col">Destination</th>
+              <th scope="col">Frequency (min)</th>
+              <th scope="col">Next Arrival</th>
+              <th scope="col">Minutes Away</th>
+            </tr>
+          </thead>
+          ​
+          <!--This is where the output will go-->
+          <tbody>
+            ​
+          </tbody>
+        </table>
+      </div>
+
+      <br />
+
+      <div class="card">
+        <div class="card-header">
+          Add Train
+        </div>
+        ​
+        <div class="card-body">
+          <h5 class="card-title">
+            <form>
+              <div class="form-group">
+                <label for="formGroupExampleInput2">Train Name</label>
+                <input type="text" class="form-control" id="name" />
+              </div>
+              ​
+              <div class="form-group">
+                <label for="formGroupExampleInput2">Destination</label>
+                <input type="text" class="form-control" id="destination" />
+              </div>
+              ​
+              <div class="form-group">
+                <label for="formGroupExampleInput"
+                  >First Train Time(HH:mm - military time ):</label
+                >
+                <input type="text" class="form-control" id="time" />
+              </div>
+              <div class="form-group">
+                <label for="formGroupExampleInput2">Frequency</label>
+                <input type="text" class="form-control" id="frequency" />
+              </div>
+              ​
+              <button type="submit" class="btn btn-primary" id="add">
+                Submit
+              </button>
+              ​
+            </form>
+          </h5>
+        </div>
+      </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
