added calculations for time

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <h5 class="card-title">
             <form>
               <div class="form-group">
-                <label for="formGroupExampleInput2">Train Name</label>
+                <label for="formGroupExampleIn6put2">Train Name</label>
                 <input type="text" class="form-control" id="name" />
               </div>
               ​
